--- a/manuscripts/24-causal-diagrams-tutorial-jb/short-causal-diagrams.qmd
+++ b/manuscripts/24-causal-diagrams-tutorial-jb/short-causal-diagrams.qmd
@@ -275,12 +275,12 @@ $$
 A challenge remains in computing these treatment-group averages when individual causal effects are unobservable. Consider the problem framed in terms of *full data* that would be required to compute these averages — that is in terms of the complete counterfactual dataset where the missing potential outcomes, inherent in observational data, were somehow available:
 
 $$
-\text{Average Treatment Effect} = \left(\underbrace{\underbrace{\mathbb{E}[Y(1)|A = 1]}_{\text{observed for } A = 1} + \underbrace{\mathbb{E}[Y(1)|A = 0]}_{\text{unobserved for } A = 0}}_{\text{effect among treated, by the law of total expectation}}\right) - \left(\underbrace{\underbrace{\mathbb{E}[Y(0)|A = 0]}_{\text{observed for } A = 0} + \underbrace{\mathbb{E}[Y(0)|A = 1]}_{\text{unobserved for } A = 1}}_{\text{effect among untreated, by the law of total expectation}}\right).
+\text{Average Treatment Effect} = \left(\underbrace{\underbrace{\mathbb{E}[Y(1)|A = 1]}_{\text{observed for } A = 1} + \underbrace{\mathbb{E}[Y(1)|A = 0]}_{\text{unobserved for } A = 0}}_{\text{effect among treated}}\right) - \left(\underbrace{\underbrace{\mathbb{E}[Y(0)|A = 0]}_{\text{observed for } A = 0} + \underbrace{\mathbb{E}[Y(0)|A = 1]}_{\text{unobserved for } A = 1}}_{\text{effect among untreated}}\right).
 $$
 
 Consider that for each treatment condition, half the observations needed to compute a treatment-group average are (inherently) unobserved. 
 
-Randomisation allows investigators to recover the treatment group averages even though treatment groups contain inherently missing observations. When investigators effectively randomise units into treatment conditions, and there is full adherence, the distributions of confounding factors that could explain differences in the potential outcomes are balanced across the conditions. Randomisation (in a perfect experiment) ensures that nothing can explain a difference in treatment group average except the treatment. This implies (by the law of iterated expectations):
+Randomisation allows investigators to recover the treatment group averages even though treatment groups contain inherently missing observations. When investigators effectively randomise units into treatment conditions, and there is full adherence, the distributions of confounding factors that could explain differences in the potential outcomes are balanced across the conditions. Randomisation (in a perfect experiment) ensures that nothing can explain a difference in treatment group average except the treatment. This implies:
 
 $$
 \widehat{\mathbb{E}}[Y(0) | A = 1] = \widehat{\mathbb{E}}[Y(0) | A = 0]
